Draft implementation of DB and ORM

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 ALCHEMY_API_KEY=magv6H7ov59QxCbWFfovMGNNoixCo4g3
 ETHERSCAN_API_KEY=VJK2ZW93KTYVMTPMG7SEBQNQTHBYJSTTCS
+DB_URL=postgresql://codyclifton:Tiggy285@localhost/token_transactions
